--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>hellodocker</groupId>
-  <artifactId>hellodocker</artifactId>
+  <groupId>SentimentAnalysis</groupId>
+  <artifactId>SentimentAnalysis</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <dependencies>
@@ -42,11 +42,11 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.4</version>
         <configuration>
-          <finalName>sparkexample</finalName>
+          <finalName>echosec</finalName>
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>sparkexample.Hello</mainClass>
+              <mainClass>echosec.App</mainClass>
               <classpathPrefix>dependency-jars/</classpathPrefix>
             </manifest>
           </archive>
@@ -74,13 +74,13 @@
             <phase>package</phase>
 
             <configuration>
-              <finalName>sparkexample</finalName>
+              <finalName>echosec</finalName>
               <descriptorRefs>
                 <descriptorRef>jar-with-dependencies</descriptorRef>
               </descriptorRefs>
               <archive>
                 <manifest>
-                  <mainClass>sparkexample.Hello</mainClass>
+                  <mainClass>echosec.App</mainClass>
                 </manifest>
               </archive>
             </configuration>
