--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .idea/**/tasks.xml
 .idea/dictionaries
 
+.project
+
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
